Updated portfolio section with new content(Weather App) and fixed the images from being stretched out of shape.

--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -93,6 +93,7 @@ a:hover {
 img {
 	width: 100%;
 	border-radius: 10px;
+	object-fit: cover;
 }
 
 .main {
@@ -134,7 +135,7 @@ img {
 }
 .content-img {
 	width: 144px;
-	height: 144px;
+	height: 100px;
 	border: 1px solid #f7601b;
 	background-image: linear-gradient(180deg, #f7691b, rgba(0, 0, 0, 0));
 	border-radius: 20px;
